# mcpServer

./: .gitignore  README.md  app.py  browser_mcp.json  pyproject.toml
amazon_mcp_tools/: README.md  client.py  config.json  server.py
amazon_mcp_tools/agents/: compare_products.py  final_eval.py  planner.py  reflector.py  task_executor.py
gmail_tools_server/: README.md  client.py  config.json  gmail_server.py  tool_def_maker.py  workflow.py
gmail_tools_server/agents/: planner.py  task_executor.py  urgency_classifier.py
mcp_client_server_math_weather/: README.md  client.py  mathserver.py  weatherserver.py
mcp_servers_external/: README.md  app.py  app_openai.py
neo4j/: api.py  client.py  index.html  neo4j_config.json  neo4j_runner.py  schema.txt  server.py  task_executor.py
neo4j/prompts/: create.py  relationship.py  run.py
tweet_analysis_workflow/: README.md  output.js  output.json  prototype.html  server_tools.py  tweets.csv  worflow.ipynb
